--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="iu">
+<html lang="en" ng-app="app">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>哎哟找旅友</title>
-    <!-- <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet"> -->
+    <title>Ionic Starter</title>
     <link href="./css/app.css" rel="stylesheet" type="text/css">
-    <!-- <link href="./css/mobiscroll.custom&#45;2.16.1.min.css" rel="stylesheet" type="text/css"> -->
   </head>
   <body>
-    <h1> hello </h1>
-
+    <ion-nav-view></ion-nav-view>
     <script src="./js/libs.js"></script>
-    <!-- <script src="./js/templates.js"></script> -->
-    <!-- <script src="./js/routes.js"></script> -->
     <script src="./js/app.js"></script>
   </body>
 </html>
