--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
     <ion-nav-view></ion-nav-view>
     <script src="./js/libs.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/templates.js"></script>
+    <script src="./js/views.js"></script>
   </body>
 </html>
