--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en" ng-app="app">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
     <title>Ionic Starter</title>
     <link href="./css/app.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body ng-app="app">
+    <div class="bar bar-header bar-light">
+          <button class="button icon ion-navicon"></button>
+            <h1 class="title">Header Buttons</h1>
+              <button class="button">Edit</button>
+
+    </div>
     <ion-nav-view></ion-nav-view>
+
     <script src="./js/libs.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/templates.js"></script>
